--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <h1>Login</h1>
 <div><p id="error"></p></div>
 <br/>
-Try accessing <a href="/restricted">/restricted</a>, then authenticate with "tj" and "foobar".
+Try accessing <a href="/restricted">/restricted</a>, else <a href="/register">register</a>.
 <form method="post" action="/login">
   <p>
     <label>Username:</label>
