--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,20 +1,24 @@
 <%- include('head'); %>
-<h1>Login</h1>
-<div><p id="error"></p></div>
-<br/>
-Try accessing <a href="/restricted">/restricted</a>, else <a href="/register">register</a>.
-<form method="post" action="/login">
-  <p>
-    <label>Username:</label>
-    <input type="text" name="username">
-  </p>
-  <p>
-    <label>Password:</label>
-    <input type="password" name="password">
-  </p>
-  <p>
-    <input type="submit" value="Login">
-  </p>
-</form>
+<div class="container">
+  <h1>Login</h1>
+  <div style="visibility:hidden" id="error-div"><p id="error" class="alert alert-danger" role="alert"></p></div>
+  Try accessing <a href="/restricted">/restricted</a>, else <a href="/register">register</a>.
+  <form method="post" action="/login">
+    <table>
+      <tr>
+        <td><label>Username:</label>
+        <td><input type="text" name="username"></td>
+      </tr>
+      <tr>
+        <td><label>Password:</label></td>
+        <td><input type="password" name="password"></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><input type="submit" value="Login"></td>
+      </tr>
+    </table>
+  </form>
+</div>
 
 <%- include('foot');%>
